--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t hvonderheyde/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run test npm run test -- --coverage
+  - docker run hvonderheyde/docker-react npm run test -- --coverage
